name:                record
version:             0.1.0.5
synopsis:            Efficient, type safe records implemented using GADTs and type level strings.
homepage:            http://quasimal.com/projects/records
license:             BSD3
license-file:        LICENSE
author:              Mike Ledger
maintainer:          eleventynine@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:      src
  exposed-modules:     Data.Record
  build-depends:       base >= 4.6, template-haskell ==2.8.*
